--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,19 @@ services:
     volumes:
       - .:/app
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    volumes:
+      - ./data/pgadmin_data:/var/lib/pgadmin_data
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 5050
+    ports:
+      - "5050:5050"
+    depends_on:
+      - db
+ 
   db:
     image: postgres:13
     volumes:
