--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis_service:
+        condition: service_started
     command: sh -c "uvicorn main:app --reload --port=8000 --host=0.0.0.0"
     ports:
       - 8000:8000
@@ -37,6 +39,11 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: workout_db
+
+  redis_service:
+    image: "redis"
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
