--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,22 @@
 version: '3'
 
 services:
+  db:
+    image: postgres:13
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    expose:
+      - 5432
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: "exit 0"
+      # test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432", "-U", "admin", "-d", "workout_db", "-t", "1"]
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: workout_db
+
   backend:
     build: .
     depends_on:
@@ -27,18 +43,7 @@ services:
     depends_on:
       - db
  
-  db:
-    image: postgres:13
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    expose:
-      - 5432
-    healthcheck:
-      test: "exit 0"
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: workout_db
+  
 
   redis_service:
     image: "redis"
