--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - "5432:5432"
     healthcheck:
       test: "exit 0"
-      # test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432", "-U", "admin", "-d", "workout_db", "-t", "1"]
+    #   test: ["CMD-SHELL", "pg_isready"]
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
@@ -43,8 +43,6 @@ services:
     depends_on:
       - db
  
-  
-
   redis_service:
     image: "redis"
     ports:
