--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,9 @@ services:
         condition: service_healthy
       redis_service:
         condition: service_started
-    command: sh -c "uvicorn main:app --reload --port=8000 --host=0.0.0.0"
+    # command: sh -c "uvicorn main:app --reload --port=8000 --host=0.0.0.0"
+    command: ["bash", "-c", "alembic upgrade head && uvicorn main:app --reload --host 0.0.0.0 --port 8000"]
+
     ports:
       - 8000:8000
     volumes:
