--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: "exit 0"
-    #   test: ["CMD-SHELL", "pg_isready"]
+      # test: "exit 0"
+      test: ["CMD-SHELL", "pg_isready"]
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
